--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -15,6 +15,9 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy seed data
+COPY ../../data/seed /app/data/seed
+
 COPY . .
 
 CMD sh -c "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
