--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,14 +9,14 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@radix-ui/react-slot": "^1.0.2",
-        "@radix-ui/react-select": "^2.0.0",
-        "@radix-ui/react-label": "^2.0.2",
-        "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-dialog": "^1.0.5",
-        "@radix-ui/react-tabs": "^1.0.4",
-        "@radix-ui/react-separator": "^1.0.3",
+        "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-progress": "^1.0.3",
+        "@radix-ui/react-select": "^2.0.0",
+        "@radix-ui/react-separator": "^1.0.3",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-switch": "^1.0.3",
+        "@radix-ui/react-tabs": "^1.0.4",
         "@tanstack/react-query": "^5.0.0",
         "axios": "^1.6.0",
         "class-variance-authority": "^0.7.0",
@@ -34,6 +34,8 @@
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "autoprefixer": "^10.0.1",
+        "eslint": "^8.57.0",
+        "eslint-config-next": "^14.1.0",
         "postcss": "^8",
         "tailwindcss": "^3.3.0",
         "typescript": "^5"
